--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
       </figure>
     </section>
 
+    <section id="news">
+      <h3>Company News</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+        commodo consequat. Duis aute.</p>
+    </section>
+
     <section id="details">
       <div>
         <h3>Contact</h3>
