automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
           commodo consequat. Duis aute.</p>
       </section>
-    </div>
+    </div> <!-- wrapper closing-->
     <section id="details">
       <div>
         <h3>Contact</h3>
