--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
       </section>
 
-      <section id="promotional">
+      <section id="promotional" class="col-2 first">
         <figure>
           <video controls>
             <source src="videos/real-estate.mp4" type="video/mp4">
@@ -41,7 +41,7 @@
         </figure>
       </section>
 
-      <section id="news">
+      <section id="news" class="col-1">
         <h3>Company News</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -51,7 +51,7 @@
     </div> <!-- wrapper closing-->
     <section id="details">
       <div class="wrapper">
-        <div>
+        <div class="col-1 first">
           <h3>Contact</h3>
           <p>
             email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
